# oss-red-flag-checker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  REUSE.toml  pyproject.toml  release-please-config.json  renovate.json5
.github/: release.yml
.github/actions/poetrybuild/: action.yaml
.github/actions/uvbuild/: action.yaml
.github/workflows/: ci-security.yaml  publish.yaml  release-please.yaml  release-vulnerabilities.yaml  test.yaml
.reuse/: dep5
doc/: screencast.sh
ossrfc/: __init__.py  _analysis.py  _contributions.py  _git.py  _licensing.py  _matching.py  _report.py  checker.py
tests/: conftest.py  test_checker.py  test_licensing.py  test_matching.py  test_report.py  test_repos.txt
tests/resources/fake_repository/: CONTRIBUTING.adoc  CONTRIBUTING.md  README.adoc  README.md
tests/resources/fake_repository/LICENSES/: MIT.txt
tests/resources/fake_repository/src/: hello.py
