# SPDX-FileCopyrightText: 2023 DB Systel GmbH
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "oss-red-flag-checker"
version = "0.1.7"
description = "Check remote repositories for typical red flags like CLAs and risks due to low development activity"
authors = ["Open Source at Deutsche Bahn <opensource@deutschebahn.com>"]
maintainers = ["Max Mehl <max.mehl@deutschebahn.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbsystel/oss-red-flag-checker/"
keywords = ["ospo", "open-source-management", "supply-chain", "risk-analysis"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Topic :: Software Development",
]
packages = [{ include = "ossrfc" }]

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "^2.8.1"
gitpython = "^3.1.46"
platformdirs = "^4.9.4"
tqdm = "^4.67.3"
termcolor = "^3.3.0"


[tool.poetry.group.dev.dependencies]
isort = "^8.0.0"
pylint = "^4.0.0"
black = "^26.0.0"
mypy = "^1.19.1"
types-tqdm = "^4.67.3.20260303"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
bump-my-version = "^1.2.7"

[tool.poetry.scripts]
ossrfc = 'ossrfc.checker:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# FORMATTING settings
[tool.isort]
profile = "black"

[tool.black]
line-length = 100

# MYPY settings
[tool.mypy]
files = ["ossrfc/*.py"]

# PYTEST settings
[tool.pytest.ini_options]
addopts = "--cov=ossrfc"

# Bump-My-Version
[tool.bumpversion]
commit = true
tag = true
allow_dirty = false
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
regex = true
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""
