# SPDX-FileCopyrightText: 2023 DB Systel GmbH
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "oss-red-flag-checker"
version = "0.1.10"
description = "Check remote repositories for typical red flags like CLAs and risks due to low development activity"
authors = [{ name = "Open Source at Deutsche Bahn", email = "opensource@deutschebahn.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "Max Mehl", email = "max.mehl@deutschebahn.com" }]
keywords = [
    "ospo",
    "open-source-management",
    "supply-chain",
    "risk-analysis",
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygithub>=2.8.1,<3",
    "gitpython>=3.1.46,<4",
    "platformdirs>=4.9.4,<5",
    "termcolor>=3.3.0,<4",
]

[project.urls]
Repository = "https://github.com/dbsystel/oss-red-flag-checker/"

[project.scripts]
ossrfc = "ossrfc.checker:main"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
    "types-tqdm>=4.67.3.20260303,<5",
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["ossrfc"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# FORMATTING and LINTING settings
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T",
    "FBT",
    "LOG015",
    "COM812",
    "ERA001",
    "S310",
    "D205",
    "D212",
    "PTH123",
]
[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["S101", "PLR", "PT011", "ANN001", "ANN201", "INP001"]
"tests/**/*" = ["INP001"]
[tool.ruff.lint.pydocstyle]
convention = "google"

# TY settings
[tool.ty.src]
include = ["ossrfc"]

# PYTEST settings
[tool.pytest.ini_options]
addopts = "--cov=ossrfc"
